feat(about): separated about section and home page
+ moved all the about information to the separate About section
+ Simplify the home page as the first landing page

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,6 +11,9 @@ website:
   search: false
   navbar:
     background: "#536878"
+    left:
+      - href: about/index.qmd
+        text: About
   page-footer:
     left: "Copyright 2025, Hazman Naim"
     right:
